style(eslint): add comma-dangle eslint rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -92,6 +92,10 @@
     "eol-last": [
       "error",
       "always"
+    ],
+    "comma-dangle": [
+      "error",
+      "always-multiline"
     ]
   },
   "settings": {
