--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -96,7 +96,8 @@
     "comma-dangle": [
       "error",
       "always-multiline"
-    ]
+    ],
+    "no-process-env": "error"
   },
   "settings": {
     "import/parsers": {
