--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --project tsconfig.json",
+    "tsc": "tsc --project tsconfig.json",
     "prisma": "prisma studio"
   },
   "prisma": {
