--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 NODE_ENV="production"
-ORIGIN_URL="http://localhost:3000"
+DEPLOYMENT_URL="http://localhost:3000"
 DATABASE_URL="mongodb+srv://<username>:<password>@yourproject.asdfg0j.mongodb.net/<database>"
 AUTH_SECRET="secret"
 GCS_PROJECT_ID="your-project-id"
