feat(components): implements create and list voice and video channel UI

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "tsc": "tsc --project tsconfig.json",
+    "check": "next lint && tsc --project tsconfig.json",
     "db": "prisma studio",
     "db:update": "prisma generate && prisma db push"
   },
