Revert "refactor(env): change ORIGIN_URL to DEPLOYMENT_URL env key"
This reverts commit 86ad879e752ffc55d3a962d77ed0470439cff689.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 NODE_ENV="production"
-DEPLOYMENT_URL="http://localhost:3000"
+ORIGIN_URL="http://localhost:3000"
 DATABASE_URL="mongodb+srv://<username>:<password>@yourproject.asdfg0j.mongodb.net/<database>"
 AUTH_SECRET="secret"
 GCS_PROJECT_ID="your-project-id"
