--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 NODE_ENV="production"
 ORIGIN_URL="http://localhost:3000"
+NEXT_PUBLIC_SOCKET_IO_URL="http://localhost:3001"
 DATABASE_URL="mongodb+srv://<username>:<password>@yourproject.asdfg0j.mongodb.net/<database>"
 AUTH_SECRET="secret"
 GCS_PROJECT_ID="your-project-id"
