--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@google-cloud/storage": "^7.8.0",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.12.0",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
