--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint",
     "tsc": "tsc --project tsconfig.json",
     "db": "prisma studio",
-    "db:update": "prisma generate && prisma db push"
+    "db:update": "prisma db push"
   },
   "prisma": {
     "schema": "src/prisma/schema.prisma"
