--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -61,6 +61,7 @@
       }
     ],
     // Overrides
+    "no-process-env": "error",
     "@typescript-eslint/semi": [
       "error",
       "never"
