--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
     "react-intersection-observer": "^9.8.2",
+    "sharp": "^0.33.3",
     "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
