ops: adjust .env and Dockerfile ENV

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-NODE_ENV="production"
 ORIGIN_URL="http://127.0.0.1:3000"
+AUTH_TRUST_HOST="http://127.0.0.1:3000"
 NEXT_PUBLIC_SOCKET_IO_URL="http://127.0.0.1:3001"
+
 DATABASE_URL="mongodb+srv://<username>:<password>@yourproject.asdfg0j.mongodb.net/<database>"
 AUTH_SECRET="secret"
 GCS_PROJECT_ID="your-project-id"
