--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,5 @@ NEXT_PUBLIC_SOCKET_IO_URL="http://127.0.0.1:3001"
 DATABASE_URL="mongodb+srv://<username>:<password>@yourproject.asdfg0j.mongodb.net/<database>"
 AUTH_SECRET="secret"
 GCS_PROJECT_ID="your-project-id"
-GCS_SERVICE_ACCOUNT_KEY_FILE="path/to/keyfile.json"
+GCS_SERVICE_ACCOUNT_KEY_FILE="service-accounts/keyfile.json"
 GCS_BUCKET_NAME="bucket-name"
