--- a/socket-io/package.json
+++ b/socket-io/package.json
@@ -1,21 +1,19 @@
 {
   "name": "socket-io",
-  "module": "index.ts",
-  "type": "module",
   "scripts": {
+    "build": "tsc --project tsconfig.json --outdir ./build",
+    "start-node": "node build/index.js",
     "start": "bun index.ts",
     "dev": "bun --watch index.ts"
   },
   "devDependencies": {
-    "@types/bun": "latest",
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+    "@types/jsonwebtoken": "^9.0.6",
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "socket.io": "^4.7.5"
