Revert "ops: add create-env for cloud build ci/cd"
This reverts commit f384d61615d9f2fd664b88fd89e017714e84963b.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "lint": "next lint",
     "tsc": "tsc --project tsconfig.json",
     "db": "prisma studio",
-    "db:update": "prisma db push",
-    "create-env": "printenv > .env"
+    "db:update": "prisma db push"
   },
   "prisma": {
     "schema": "src/prisma/schema.prisma"
