--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -32,6 +32,8 @@ steps:
         "0",
         "--max-instances",
         "1",
+        "--memory",
+        "256Mi",
       ]
 images:
   ["asia-southeast1-docker.pkg.dev/deezcord-417022/nextjs-node-repo/deezcord"]
