chore: update Dockerfile and package.json for environment variables and build commands

--- a/socket-io/package.json
+++ b/socket-io/package.json
@@ -4,7 +4,8 @@
     "build": "tsc --project tsconfig.json --outdir ./build",
     "start-node": "node build/index.js",
     "start": "bun index.ts",
-    "dev": "bun --watch index.ts"
+    "dev": "bun --watch index.ts",
+    "tsc": "tsc --project tsconfig.json"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
